<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView">
    </item>

    <item android:id="@+id/action_more"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:title="@string/menu_more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/liebiao"
                android:title="功能列表" />
            <item
            android:id="@+id/note"
            android:title="@string/menu_note" />
            <item
                android:id="@+id/about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>
</menu>